[gd_scene load_steps=14 format=3 uid="uid://do1x5lohvx8p0"]

[ext_resource type="Script" path="res://Scripts/score_screen.gd" id="1_64lwg"]
[ext_resource type="Texture2D" uid="uid://b5egjms8hb54c" path="res://Sprites/FurTufts2.png" id="1_r2rmm"]
[ext_resource type="FontFile" uid="uid://c8ufwkpiyl4ts" path="res://Fonts/FreckleFace-Regular.ttf" id="2_h5gh4"]
[ext_resource type="FontFile" uid="uid://c5u4osxoijuau" path="res://Fonts/Schoolbell-Regular.ttf" id="3_a5vfj"]
[ext_resource type="AudioStream" uid="uid://5t1s41dcb85g" path="res://Audio/BrainRot.mp3" id="5_cqjve"]
[ext_resource type="AudioStream" uid="uid://c284yqbh3a2j4" path="res://Audio/barberBitFix.mp3" id="6_6rmq3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xoy1k"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_wagr4"]
atlas = ExtResource("1_r2rmm")
region = Rect2(0, 0, 500, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_g208v"]
atlas = ExtResource("1_r2rmm")
region = Rect2(500, 0, 500, 300)

[sub_resource type="SpriteFrames" id="SpriteFrames_l2tq7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wagr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g208v")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="Animation" id="Animation_t7fwu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-250, -150)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-250, 150)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(250, -150)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(250, 150)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprites5:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(750, -149)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprites6:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(750, 151)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprites1:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprites2:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tyohi"]
resource_name = "Scrolling"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.93333, 4, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-250, -150), Vector2(-741.667, -150), Vector2(750, -150), Vector2(250, -150)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.93333, 4, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-250, 150), Vector2(-741.667, 150), Vector2(750, 150), Vector2(250, 150)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(250, -150), Vector2(-250, -150), Vector2(-750, -150)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(250, 150), Vector2(-250, 150), Vector2(-750, 150)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprites5:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 4, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(750, -149), Vector2(250, -149), Vector2(-250, -149)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprites6:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 4, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(750, 151), Vector2(250, 151), Vector2(-250, 151)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprites1:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 3.93333, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprites2:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 3.93333, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dv42s"]
_data = {
"RESET": SubResource("Animation_t7fwu"),
"Scrolling": SubResource("Animation_tyohi")
}

[node name="ScoreScreen" type="Node2D"]
script = ExtResource("1_64lwg")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.948673, 3.7542e-06, 0.572317, 1)
offset_left = -27.0
offset_top = -25.0
offset_right = 1942.0
offset_bottom = 1112.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xoy1k")

[node name="ScrollingBackdrop" type="Node2D" parent="."]
modulate = Color(0, 1, 0, 1)
position = Vector2(960, 516)
rotation = 0.523599
scale = Vector2(3, 3)

[node name="Sprites1" type="AnimatedSprite2D" parent="ScrollingBackdrop"]
position = Vector2(-250, -150)
sprite_frames = SubResource("SpriteFrames_l2tq7")
autoplay = "default"
frame_progress = 0.337932

[node name="Sprites2" type="AnimatedSprite2D" parent="ScrollingBackdrop"]
position = Vector2(-250, 150)
sprite_frames = SubResource("SpriteFrames_l2tq7")
autoplay = "default"
frame_progress = 0.890955

[node name="Sprites3" type="AnimatedSprite2D" parent="ScrollingBackdrop"]
position = Vector2(250, -150)
sprite_frames = SubResource("SpriteFrames_l2tq7")
autoplay = "default"
frame_progress = 0.598228

[node name="Sprites4" type="AnimatedSprite2D" parent="ScrollingBackdrop"]
position = Vector2(250, 150)
sprite_frames = SubResource("SpriteFrames_l2tq7")
autoplay = "default"
frame_progress = 0.890955

[node name="Sprites5" type="AnimatedSprite2D" parent="ScrollingBackdrop"]
position = Vector2(750, -149)
sprite_frames = SubResource("SpriteFrames_l2tq7")
autoplay = "default"
frame_progress = 0.598228

[node name="Sprites6" type="AnimatedSprite2D" parent="ScrollingBackdrop"]
position = Vector2(750, 151)
sprite_frames = SubResource("SpriteFrames_l2tq7")
autoplay = "default"
frame_progress = 0.890955

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScrollingBackdrop"]
libraries = {
"": SubResource("AnimationLibrary_dv42s")
}
autoplay = "Scrolling"

[node name="ScoreLetter" type="Label" parent="."]
offset_top = 117.0
offset_right = 1919.0
offset_bottom = 610.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("2_h5gh4")
theme_override_font_sizes/font_size = 400
text = "YAY!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreCaption" type="Label" parent="."]
offset_left = 133.0
offset_top = 587.0
offset_right = 1786.0
offset_bottom = 1080.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("3_a5vfj")
theme_override_font_sizes/font_size = 100
text = "you win!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="BrainRot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_cqjve")
autoplay = true
bus = &"Music"

[node name="Play" type="Button" parent="."]
offset_left = 42.0
offset_top = 948.0
offset_right = 496.0
offset_bottom = 1052.0
theme_override_fonts/font = ExtResource("3_a5vfj")
theme_override_font_sizes/font_size = 50
text = "Return to Title"

[node name="BarberBitFix" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6rmq3")
bus = &"SFX"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
